<resources>
    <string name="app_name">Corona App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmed">Confirmed:</string>
    <string name="deathes">Deathes:</string>
    <string name="recoverd">Recoverd:</string>
    <string name="stayhome">#STAYHOME</string>
    <string name="search">Search</string>
    <string name="search_country">Search Country</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="about">About</string>
    <string name="About">The app tracks the global state of the corona virus. The app is mostly written for learning purposes, and to help beginners understand the code and how things are done in the Android environment.\n\n
        I\'m also open for job offers
    </string>
</resources>
