<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.coronaapp.Main.MainScreenViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/search_country"
            android:inputType="textPersonName"
            android:text="@={viewModel.editTextContent}"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pie_chart" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:text="@string/search"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editText" />
        <!--        android:onClick="@{() -> viewModel.onDisplayEditTextContent()}"-->


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@{viewModel.displayEditTextContent}"
            app:layout_constraintBottom_toTopOf="@+id/stay_home_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_button" />

        <com.github.mikephil.charting.charts.PieChart

            android:id="@+id/pie_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:id="@+id/stay_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/stayhome"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/recycler_view"-->
        <!--            android:layout_width="391dp"-->
        <!--            android:layout_height="390dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/button"-->
        <!--            app:layout_constraintVertical_bias="0.868" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>